<resources>
    <string name="app_name">Mychat</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">546225932712078</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb546225932712078</string>
    <!-- Twitter consumer key and secret -->
    <string name="twitter_consumer_key" translatable="false">YOUR_CONSUMER_KEY</string>
    <string name="twitter_consumer_secret" translatable="false">YOUR_CONSUMER_SECRET</string>
    <string name="info">Create Group</string>
    <string name="alert_msg_bt">Enter your Group Name </string>
    <string name="turn_on_bt">Create</string>
    <string name="cancel">Cancel</string>
    <string name="yes_log_out">Yes log out</string>
    <string name="are_you_sure_you_n_want_to_log_out">Are You Sure You,\n Want To Log Out?</string>
    <string name="file_browser">File Browser</string>
    <string name="img">img_</string>
    <string name="yyyy_mm_dd_hh_mm_ss">yyyyMMdd_HHmmss</string>
    <string name="jpg">.jpg</string>
    <string name="photopath">PhotoPath</string>
    <string name="image_file_creation_failed">Image file creation failed</string>
    <string name="file">file:</string>
    <string name="image_chooser">Image Chooser</string>
    <string name="title">Title</string>
    <string name="body">this is body of msg</string>
    <string name="image">image</string>
    <string name="maps_api_key">AIzaSyAAPmZxYX2-l3OrWTCzWqPAuOpItaH-Z_o</string>
    <string name="biometric_alert_dialog_txt">Do You want to setup with \"<b>Device Authentication</b>\" to access Your Account?</string>
    <string name="open_settings_txt">Open Settings</string>
    <string name="add_finger_print_to_your_device_txt">To enable "Device Authentication" you must add Fingerprint or Face Id first.</string>
    <color name="shimmer_background">#dddddd</color>
    <string name="please_scan_your_fingerprint_txt">Please scan your fingerprint once to Activate Device Authentication.</string>
    <string name="activate_device_authentication_txt">Activate Device Authentication</string>

</resources>
