<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    app:cardCornerRadius="@dimen/zero_dp"
    app:strokeColor="@color/home_title_color"
    app:strokeWidth="@dimen/two_dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingLeft="@dimen/_60dp"
        android:paddingRight="@dimen/_60dp"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sp"
            android:src="@drawable/ic_warning_black_24dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/are_you_sure_you_n_want_to_log_out"
            android:textColor="#272525"
            android:textSize="@dimen/_20sp"
            android:textStyle="bold" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/_18dp"
            android:layout_gravity="center">
            <Button
                android:id="@+id/logout_button"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp_thirty"
                android:backgroundTint="@color/home_title_color"
                android:gravity="center"
                android:text="@string/yes_log_out" />

            <Button
                android:id="@+id/cancelBtn"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="@dimen/_12sp"
                android:layout_gravity="center"
                android:backgroundTint="@color/red"
                android:text="@string/cancel"
                />
        </LinearLayout>

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
