<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">
<ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:scrollbars="none">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:id="@+id/topLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true">
                <ImageView
                    android:id="@+id/backButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_20dp"
                    android:layout_marginEnd="@dimen/_5dp"
                    android:layout_alignParentStart="true"
                    android:src="@drawable/ic_arrow"/>
                <TextView
                    android:id="@+id/txtSymbol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_toRightOf="@+id/backButton"
                    android:textColor="@color/home_title_color"
                    android:text="@string/activate_device_authentication_txt"
                    android:textSize="@dimen/_18dp" />

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_below="@+id/topLayout"
                android:padding="@dimen/_25dp"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/fingerPrintImgButton"
                    android:layout_width="@dimen/_100dp"
                    android:layout_height="@dimen/_100dp"
                    android:layout_centerHorizontal="true"
                    app:srcCompat="@drawable/fingerprint_icon"/>
                <TextView
                    android:id="@+id/fingerprint_msg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_below="@+id/fingerPrintImgButton"
                    android:textColor="@color/black"
                    android:alpha="0.6"
                    android:text="@string/please_scan_your_fingerprint_txt"
                    android:textSize="@dimen/_18dp" />
                <TextView
                    android:id="@+id/errorMsg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_below="@+id/fingerprint_msg"
                    android:textColor="@color/red"
                    android:textSize="@dimen/_18dp" />
                <Button
                    android:id="@+id/cancelButton"
                    android:layout_width="match_parent"
                    android:layout_marginLeft="@dimen/_0dp"
                    android:layout_marginRight="@dimen/_0dp"
                    android:layout_below="@+id/errorMsg"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_30dp"
                    android:layout_marginBottom="@dimen/_8dp"
                    android:background="?selectableItemBackground"
                    android:elevation="@dimen/_5dp"
                    android:text="@string/cancel"
                    />
            </RelativeLayout>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
