<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    app:cardCornerRadius="@dimen/zero_dp"
    app:strokeColor="@color/home_title_color"
    app:strokeWidth="@dimen/two_dp">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        xmlns:app="http://schemas.android.com/apk/res-auto">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:layout_marginTop="@dimen/_15dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"

            xmlns:app="http://schemas.android.com/apk/res-auto">


            <TextView
                android:id="@+id/txtbluethooth_title"
                android:layout_width="wrap_content"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:text="@string/info"
                android:textColor="@color/home_title_color"
                android:textSize="@dimen/_20sp"
                />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10dp"
            android:layout_marginRight="@dimen/_20sp"
            android:layout_marginLeft="@dimen/_20sp"
            android:background="@android:color/transparent"
            android:textColorHint="@color/red"
            app:boxBackgroundColor="@android:color/transparent"
            app:hintEnabled="true"
            app:hintTextColor="@color/brown">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtGrpName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:inputType="textImeMultiLine|textCapSentences"
                android:padding="@dimen/_15dp">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/linearbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="@dimen/_20sp"
            android:layout_marginRight="@dimen/_20sp"
            android:layout_marginTop="@dimen/dp_ten"
            >
            <Button
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_weight=".5"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background"
                android:backgroundTint="@color/red"
                android:text="@string/cancel"
                android:gravity="center"
                android:layout_marginRight="@dimen/_20sp"
                android:padding="@dimen/_10dp"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/button_text_size" />

            <Button
                android:id="@+id/btnCreate"
                android:layout_width="0dp"
                android:layout_weight=".5"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_toLeftOf="@id/btnCancel"
                android:gravity="center"
                android:layout_alignParentEnd="true"
                android:background="@drawable/button_background"
                android:text="@string/turn_on_bt"
                android:padding="@dimen/_10dp"
                android:textAllCaps="false"
                android:backgroundTint="@color/home_title_color"
                android:textColor="@android:color/white"
                android:textSize="@dimen/button_text_size"
                />
        </LinearLayout>

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>